# LowVoiceBot

./: .gitignore  Dockerfile  README.md  lowvoicebot.py  pyproject.toml  requirements.txt
