[tool.poetry]
name = "LowVoiceBot"
version = "0.2.0"
description = "@LowVoiceBot is a Telegram bot that helps send private messages in Telegram public groups via Inline Mode."
authors = ["Hung-I Wang <whygowe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.5.3"
aiohttp = "^3.8.5"
async_lru = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
